--- a/PMUL/Buscaminas/AndroidManifest.xml
+++ b/PMUL/Buscaminas/AndroidManifest.xml
@@ -22,6 +22,14 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name="com.fernando.buscaminas.SettingsActivity"
+            android:label="Preferencias"
+            android:parentActivityName="com.fernando.buscaminas.MainActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="android.preference.PreferenceActivity" />
+        </activity>
     </application>
 
 </manifest>
