--- a/PMUL/Buscaminas/AndroidManifest.xml
+++ b/PMUL/Buscaminas/AndroidManifest.xml
@@ -30,6 +30,14 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="android.preference.PreferenceActivity" />
         </activity>
+        <activity
+            android:name="com.fernando.buscaminas.About"
+            android:label="@string/title_activity_about" >
+        </activity>
+        <activity
+            android:name="com.fernando.buscaminas.RankingActivity"
+            android:label="@string/title_activity_ranking" >
+        </activity>
     </application>
 
 </manifest>
