--- a/PMUL/HungryEskimos/bin/AndroidManifest.xml
+++ b/PMUL/HungryEskimos/bin/AndroidManifest.xml
@@ -7,6 +7,7 @@
     <uses-sdk
         android:minSdkVersion="17"
         android:targetSdkVersion="17" />
+    <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
         android:allowBackup="true"
@@ -33,11 +34,16 @@
         </activity>
         <activity
             android:name="com.fernando.hungryeskimos.SettingsActivity"
-            android:label="@string/title_activity_settings" 
+            android:label="@string/title_activity_settings"
             android:parentActivityName="com.fernando.hungryeskimos.InitialActivity" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="android.preference.PreferenceActivity" />
+        </activity>
+        <activity
+            android:name="com.fernando.hungryeskimos.LoginActivity"
+            android:label="@string/title_activity_login"
+            android:windowSoftInputMode="adjustResize|stateVisible" >
         </activity>
     </application>
 
