actualizado SGES/PracticaFinal

--- a/SGES/PracticaRecuperacion/PracticaRecuperacion/PracticaRecuperacion.csproj
+++ b/SGES/PracticaRecuperacion/PracticaRecuperacion/PracticaRecuperacion.csproj
@@ -60,6 +60,11 @@
     <Compile Include="Form2.Designer.cs">
       <DependentUpon>Form2.cs</DependentUpon>
     </Compile>
+    <Compile Include="productsDataSet.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>productsDataSet.xsd</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Ticket.cs" />
@@ -79,6 +84,18 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <None Include="app.config" />
+    <None Include="productsDataSet.xsc">
+      <DependentUpon>productsDataSet.xsd</DependentUpon>
+    </None>
+    <None Include="productsDataSet.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>productsDataSet.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="productsDataSet.xss">
+      <DependentUpon>productsDataSet.xsd</DependentUpon>
+    </None>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -91,6 +108,14 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="images\cocacola.gif" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="bin\Debug\images\cocacola.gif" />
+    <None Include="bin\Debug\images\fantalimon.jpg" />
+    <None Include="bin\Debug\images\fantanaranja.JPG" />
+    <Content Include="products.mdb">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
